# get_data_catarse

./: README.md  pyproject.toml  swagger.json
catarse/database/: get_project_details.py
make_dataset/: get_project_details.py
