[tool.poetry]
name = "catarse"
version = "0.1.0"
description = ""
authors = ["João M <jmo.nick@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.0"
beautifulsoup4 = "^4.12.3"
rich = "^13.7.1"
pandas = "^2.2.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
